[package]
name = "bevy_baby"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Desktop mascot built with bevy"
authors = ["notelm <elmprograminfo@gmail.com>"]
repository = "https://github.com/not-elm/bevy_baby"
keywords = ["bevy", "desktop", "game"]
categories = ["games"]

[dependencies]
bevy = { version = "0.15", features = [
    "file_watcher",
    "bevy_picking",
    "serialize",
] }
bevy_flurx = { version = "0.9", features = ["effect", "state"] }
bevy_webview_wry = { version = "0.3", default-features = false, features = ["api"] }
serde = { version = "1", features = ["derive"] }
device_query = "3"
dirs = "6"
thiserror = "2"
serde_json = "1"
winit = "0.30.9"
rand = "0.9"
crossbeam = "0.8.4"
itertools = "0.14"
anyhow = "1.0.96"
bevy-inspector-egui = { version = "0.29", optional = true }
softbuffer = { version = "0.4.6", default-features = false, features = [
    "x11",
    "x11-dlopen",
    "wayland",
    "wayland-dlopen",
] }

[target.'cfg(target_os="macos")'.dependencies]
core-graphics = { version = "0.24.0" }
core-foundation = { version = "0.10.0" }
objc2 = { version = "0.5", features = ["std"] }
objc2-foundation = { version = "0.2" }
objc2-app-kit = { version = "0.2", features = [
    "NSWindow",
    "NSView",
    "NSApplication",
] }
apple-sys = { version = "0.2", features = ["IOKit"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.60.0", features = [
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }


[features]
default = []
develop = ["dep:bevy-inspector-egui"]

[patch.crates-io]
bevy = { path = "../bevy" }
#winit = { git = 'https://github.com/rust-windowing/winit' }